route.yaml
apiVersion: route.openshift.io/v1
kind: Route
spec:
  host: dima-sample-flask.dev.local
  port:
    targetPort: http
  to:
    kind: Service
    name: dima-sample-flask
    weight: 100
  wildcardPolicy: None
